@@ -23,6 +23,7 @@ Direct3D 11
 	* Fixed a stack overflow in Resource.FromPointer.
 	* Changed BlendStateDescription to implement IEquatable<T> and GetHashCode()
 	* Fixed the DeviceContext.MapSubresource function to properly calculate the size of the returned data.
+	* Fixed the datatypes of PipelineStatistics members to be Int64 instead of Int32.
 
 Direct2D
 	* Fixed a bug that incorrectly created RectangleGeometry from a RectangleF.
